# Mech-Exo

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Dockerfile.ml  Dockerfile.ml-gpu  Dockerfile.optuna  LICENSE  Makefile  PHASE_P5_PROJECT_BOARD.md  PREFECT_DEPLOYMENT.md  PROJECT_ROADMAP.md  README-OPS.md  README.md  build_features.py  create_sample_training_data.py  daily_digest_2025-06-08.html  daily_report_2025-06-08.html  decay.csv  docker-compose.optuna.yml  docker-compose.yml  live_dry_run_report.json  pyproject.toml  requirements.txt  setup.py  staging_dry_run_20250613_114601.json  test.db  test_capital.py  test_day1_killswitch.py  test_day4_audit.py  test_day5_dashboard.py  test_features_sample.py  test_greylist_quick.py  test_ml_training_demo.py  test_reconciliation.py  test_statement_parser.py
config/: alerts.yml  allocation.yml  api_keys.yml  backtest.yml  capital_limits.yml  decay.yml  factors.yml  factors.yml.backup.20250610_145725  factors.yml.backup.20250610_152245  factors.yml.backup.20250610_153207  killswitch.yml  reweight.yml  risk_limits.yml
dags/: after_hours_pnl_flow.py  alpha_decay_flow.py  backtest_flow.py  canary_perf_flow.py  capital_guard_flow.py  daily_flow.py  data_pipeline.py  drift_flow.py  drill_flow.py  factor_opt_flow.py  intraday_pnl_flow.py  killswitch_flow.py  ml_inference_flow.py  ml_report_flow.py  ml_reweight_flow.py  monthly_guard_flow.py  retrain_flow.py  rotational_alpha_flow.py
data/: mech_exo.duckdb  rot_alpha_scores.csv  test.duckdb
datasource/: test_universe_500.py  universe_loader.py
deployments/: canary_perf_deployment.py
(+335 files in other folders)
