[tool.poetry]
name = "mech-exo"
version = "0.5.0"
description = "Mechanical Exoskeleton - Systematic Trading System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "mech_exo"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
yfinance = "^0.2.0"
ib-insync = "^0.9.86"
prefect = "^2.14.0"
plotly = "^5.17.0"
dash = "^2.14.0"
streamlit = "^1.28.0"
pyyaml = "^6.0"
requests = "^2.31.0"
duckdb = "^0.9.0"
pyarrow = "^14.0.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
finnhub-python = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
ruff = "^0.1.0"
pre-commit = "^3.5.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"

[tool.poetry.scripts]
exo = "mech_exo.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = ["E501", "B008", "B904", "G004", "TRY400", "TRY300", "DTZ005"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=mech_exo --cov-report=term-missing"